# loci

./: .gitignore  .gitlab-ci.yml  Cargo.toml  api-guide.html  build.rs  code_query_tool.py  dev_env.md  feature_tracking_tool.py  features.html  index.html  interfaces.html  interfaces.md  kbi_build_data.json  license.py  license_tool.py  one-liners.html  one-liners.md  pages_style.css  python_packages.py  readme.html  readme.md  release.py  todos.py  user-manual-en.html  vocab.md  webpage_update_tool.py
.github/workflows/: create-release-on-push-linux64.yml  create-release-on-push-win64.yml
app-data-tkeys/: converter.py  readme.md  unit_tests.json
app-db-schemas/: gui.sql  readme.md  system.sql  translations.sql
app-kernel/: Cargo.toml  features.json
app-kernel-android/: build.gradle  features.json  settings.gradle
app-kernel-android/src/main/: AndroidManifest.xml
app-kernel-android/src/main/java/loci/: MainActivity.java
app-kernel-android/src/main/res/drawable/: background.xml  ic_vector.xml  icon.xml
app-kernel-android/src/main/res/layout/: activity_main.xml
app-kernel-desktop/: Cargo.toml  build.rs  design.md
app-kernel-desktop/src/: run_geoserver.rs
app-kernel/.cargo/: config.toml
app-kernel/src/: main.rs
app-lib/: Cargo.toml  features.json  readme.md
app-lib/src/: capi.rs  lib.rs  license.rs  tests.rs
app-subprograms/desktop-cli/: Cargo.toml  features.json
app-subprograms/desktop-cli/src/: main.rs
app-subprograms/desktop-mainwindow/: .gitignore  DesktopMainWindow.csproj  Program.cs  features.json
app-subprograms/desktop-mainwindow/www/: index.html
app-subprograms/server-webgui/: .gitignore  Cargo.toml  features.json  readme.md
app-subprograms/server-webgui/src/: main.rs
app-subprograms/server-webgui/www/: app_gui.js  app_lib.js  app_test.js  index.html  pwa_sw.js  style.css
btool/: __init__.py  __main__.py  buildall.py  tools.py  utils.py
docs/: __init__.py  __main__.py  api-guide.md  build.py  features.md  interfaces.md  one-liners.md  pages-index.html  pages_style.css  plugin_system.md  primary_gui.puml  process_startup_sequence.puml  readme.md  user-manual-en.md
license/: c_source_header.txt  enforce_source_license_policy.py
misc-abandoned/: groundup.py  xyz_tile_gen.py
misc-res/: loci-web-deploy.py  loci-web-deploy.service  loci-web-deploy.timer  readme.md  vps_fs_tune.sh
noapp-www/: app_lib.js  app_pwa.js  app_util.js  manifest.json
noapp-www/lib/smartmenus/css/sm-simple/: sm-simple.css
plugins/: win64_libusb_installer.py
plugins/loci-ws/: Cargo.toml
plugins/loci-ws/src/: main.rs
plugins/loci-ws/src/www/: app.js  fixes.css
plugins/syndeo_jms_comms/: notes.txt  readme.md  secrets.env.template  settings.gradle
plugins/syndeo_jms_comms/app/: build.gradle
plugins/syndeo_jms_comms/app/src/main/java/syndeo_jms_comms/: App.java
plugins/syndeo_jms_comms/app/src/main/schema/: SyndeoXmlSchema.xsd
plugins/syndeo_jms_comms/app/src/test/java/syndeo_jms_comms/: AppTest.java
plugins/usb_gps_reader/: Cargo.toml  readme.md
plugins/usb_gps_reader/src/: main.rs
src/: lib.rs  license.rs  main.rs  privileged_ops.rs
src/db/: init.sql  mod.rs
src/eapp/: extraction.rs  mod.rs
src/subprograms/: dump1090.rs  geoserver.rs  mod.rs  postgis.rs  rtl_sdr_programs.rs  usb_gps_reader.rs
src/trans/: mod.rs
src/webserver/: mod.rs
src/webserver/www/: 404.html  app.js  index.html  style.css
test/: __init__.py  __main__.py  posrep_sqlite_to_ws_performance.py
tests/: __init__.py  __main__.py  testall.py  utils.py
