[package]
name = "loci"
version = "0.1.0"
authors = ["Jeffrey McAteer <jeffrey.mcateer@devil-tech.com>"]
edition = "2018"
build = "build.rs"


[lib]
name = "loci"
path = "src/lib.rs"

[[bin]]
name = "loci"
path = "src/main.rs"


[features]
default = [ "embed-eapp-tar" ]

# The embed-eapp-tar feature makes build.rs include
# target/eapp_dir_<target>.tar.gz within the binary itself.
# as the .tar.gz payload gets bigger the first limit we will hit is 2gb
# in the windows PE32+ binary format, and to make the program work we
# will disable this and ship the target/eapp_dir_<target>.tar.gz separately.
# The subprograms/mod.rs code has conditional compile-time logic to
# handle both embedding and searching CWD for the tarball.
embed-eapp-tar = []

# This turns on code generation for external lib.rs stuff.
# TODO make the interface better so this is not necessary.
compile-lib-only = []


[dependencies]
crossbeam = "0.8"

mime_guess = "2.0"

rusqlite = { version = "0.24", features = ["bundled"] }

tar = "0.4"
flate2 = "1.0"

shlex = "0.1"

glob = "0.3"

serde_json = "1.0"

pgp = "0.7"

regex = "1"

nmea0183 = "0.2.3"

chrono = "0.4.19"

dirs = "3.0"

systray = { git = "https://github.com/qdot/systray-rs.git" }


[target.x86_64-unknown-linux-gnu.dependencies]
nix = "0.19.1"
which = "3.1.0"
signal-hook = "0.2"

[target.x86_64-pc-windows-gnu.dependencies]
winapi = {version = "0.3", features = ["wincon", "winuser"]}
winreg = "0.6"


[build-dependencies]
zip = "0.5.8"
walkdir = "2"
pathdiff = "0.2"
cc = "1.0"
winres = "0.1"


[package.metadata.winres]
OriginalFilename = "loci.exe"
LegalCopyright = "Copyright © 2021 DeVil-Tech"

