[package]
name = "app-lib"
version = "0.1.0"
authors = ["Jeffrey McAteer <jeffrey.p.mcateer@gmail.com>"]
edition = "2018"

[lib]
crate-type = [ "staticlib", "cdylib", "rlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# OS-wrapping libs
dirs = "3.0"
rusqlite = { version = "0.25", features = ["bundled"] }

# Intermediate data / algorithm libs
pgp = "0.7"
chrono = "0.4"
hex = "0.4"
serde_json = "1.0"
locale_config = "0.3"

[target.x86_64-unknown-linux-gnu.dependencies]
shared_memory = "0.11"

[target.aarch64-unknown-linux-gnu.dependencies]
shared_memory = "0.11"


[target.x86_64-pc-windows-gnu.dependencies]
# Used to read HKEY_LOCAL_MACHINE for getting machine ID in license::get_host_hwid() -> String
winreg = "0.6"
shared_memory = "0.11"


[dev-dependencies]
tempfile = "3.2"
rand = "0.8"
crossbeam = "0.8"
