[package]
name = "server-webgui"
version = "0.1.0"
authors = ["Jeffrey McAteer <jeffrey.p.mcateer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", features = ["alloc"] }
warp = { version = "0.3", features = ["tls"] }
warp-embed = "0.3"
rust-embed = { version = "5", features = ["debug-embed"] }
serde_json = "1.0"


