[package]
name = "loci-ws"
version = "0.1.0"
authors = ["Jeffrey McAteer <jeffrey.mcateer@devil-tech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

loci = { path = "../../../loci/", default-features = false, features = [ "compile-lib-only" ] }

actix-web-actors = "3.0"
actix = "0.10.0"
actix-web = { version = "3.0.0", default-features = false }
actix-http = "2.0.0"
actix-codec = "0.3.0"
actix-rt = "1.1.1"
actix-cors = "0.5.3"

mime_guess = "2.0"
 
rust-embed = "5.6.0"

serde_json = "1.0"

rusqlite = { version = "0.24", features = ["bundled"] }


